force-app/main/default/objects/Case/fields/Activities_to_close__c.field-meta.xml
<CustomField>
    <fullName>Activities_to_close__c</fullName>
    <label>Activities to close</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provider on-Hold</fullName>
            </value>
            <value>
                <fullName>Compile Audit Findings</fullName>
            </value>
            <value>
                <fullName>Confirm Credit Balance</fullName>
            </value>
            <value>
                <fullName>Contact Provider</fullName>
            </value>
            <value>
                <fullName>Dispose Case</fullName>
            </value>
            <value>
                <fullName>Identify Samples for Audit</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Perform Audit</fullName>
            </value>
            <value>
                <fullName>Perform Detailed Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Perform Initial Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Perform Provider &amp; Claims Data Research</fullName>
            </value>
            <value>
                <fullName>Perform Review</fullName>
            </value>
            <value>
                <fullName>Perform site Audit</fullName>
            </value>
            <value>
                <fullName>Prepare Addendum-A for Provider</fullName>
            </value>
            <value>
                <fullName>Receive &amp; Track Credit Balance</fullName>
            </value>
            <value>
                <fullName>Receive Document</fullName>
            </value>
            <value>
                <fullName>Request for Document</fullName>
            </value>
            <value>
                <fullName>Schedule Audit</fullName>
            </value>
            <value>
                <fullName>TBasic</fullName>
            </value>
            <value>
                <fullName>Test Activity 1</fullName>
            </value>
            <value>
                <fullName>Verify Provider Billing Issues</fullName>
            </value>
            <value>
                <fullName>Identify Samples &amp; Methodology for Audit</fullName>
            </value>
            <value>
                <fullName>Perform Provider Self Review</fullName>
            </value>
            <value>
                <fullName>Evaluate Provider Findings</fullName>
            </value>
            <value>
                <fullName>Perform DHSS PI Review/Audit</fullName>
            </value>
            <value>
                <fullName>Evaluate Audit Findings</fullName>
            </value>
            <value>
                <fullName>Determine Provider Actions</fullName>
            </value>
            <value>
                <fullName>Reconsideration</fullName>
            </value>
            <value>
                <fullName>Provider Appeal</fullName>
            </value>
            <value>
                <fullName>Recoupment/Financial Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>