force-app/main/default/objects/Case/fields/Activity_Due_Days_1__c.field-meta.xml
<CustomField>
    <fullName>Activity_Due_Days_1__c</fullName>
    <label>Activity_Due_Days_1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>