force-app/main/default/objects/Case/fields/Activity_Due_Days_2__c.field-meta.xml
<CustomField>
    <fullName>Activity_Due_Days_2__c</fullName>
    <label>Activity_Due_Days_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>