force-app/main/default/objects/Case/fields/Amended_Payment__c.field-meta.xml
<CustomField>
    <fullName>Amended_Payment__c</fullName>
    <label>Amended Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>