force-app/main/default/objects/Case/fields/Amount_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Amount_at_Risk__c</fullName>
    <label>Amount at Risk</label>
    <length>15</length>
    <type>Text</type>
</CustomField>