force-app/main/default/objects/Case/fields/Amount_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type_1__c</fullName>
    <label>Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overpayment</fullName>
            </value>
            <value>
                <fullName>Appeal Outcome</fullName>
            </value>
            <value>
                <fullName>Settlement Outcome</fullName>
            </value>
            <value>
                <fullName>Reconsideration Outcome Amount</fullName>
            </value>
            <value>
                <fullName>Recovery Amount</fullName>
            </value>
            <value>
                <fullName>Payment by Check - Claim Specific</fullName>
            </value>
            <value>
                <fullName>Payment by Check - Lump Sum</fullName>
            </value>
            <value>
                <fullName>Payment by Adjustment/Offset</fullName>
            </value>
            <value>
                <fullName>Payment Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>