force-app/main/default/objects/Case/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <label>Balance Amount</label>
    <summarizedField>Payment_Plan_Detail__c.Balance__c</summarizedField>
    <summaryForeignKey>Payment_Plan_Detail__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>