force-app/main/default/objects/Case/fields/Case_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Activity_Count__c</fullName>
    <label>Case Activity Count</label>
    <summaryForeignKey>Case_Activity__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>