force-app/main/default/objects/Case/fields/Case_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Business_Status__c</fullName>
    <label>Case Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold - Internal</fullName>
            </value>
            <value>
                <fullName>MFCU Hold</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Document Attempt Successful</fullName>
            </value>
            <value>
                <fullName>Credit Balance Reported</fullName>
            </value>
            <value>
                <fullName>Provider Contact Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Case Referred</fullName>
            </value>
            <value>
                <fullName>No Major Findings</fullName>
            </value>
            <value>
                <fullName>Audit Scheduled</fullName>
            </value>
            <value>
                <fullName>Audit Performed</fullName>
            </value>
            <value>
                <fullName>Client Audit Activity 1 Open</fullName>
            </value>
            <value>
                <fullName>Client Audit Activity 1 Completed</fullName>
            </value>
            <value>
                <fullName>Client Audit Activity 2 Open</fullName>
            </value>
            <value>
                <fullName>Client Audit Activity 2 Completed</fullName>
            </value>
            <value>
                <fullName>Trial Activity 1 Open</fullName>
            </value>
            <value>
                <fullName>Trial Activity 1 Completed</fullName>
            </value>
            <value>
                <fullName>Trial Activity 2 Open</fullName>
            </value>
            <value>
                <fullName>Trial Activity 2 Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>