force-app/main/default/objects/Case/fields/Case_Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Disposition_Status__c</fullName>
    <label>Case Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Administrative Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>