force-app/main/default/objects/Case/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <label>Case Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>