force-app/main/default/objects/Case/fields/Case_On_Hold_Due_to_Case_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_On_Hold_Due_to_Case_Activity_Name__c</fullName>
    <label>Case On Hold Due to Case Activity Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perform Provider &amp; Claims Data Research</fullName>
            </value>
            <value>
                <fullName>Identify Samples &amp; Methodology for Audit</fullName>
            </value>
            <value>
                <fullName>Perform Provider Self Review</fullName>
            </value>
            <value>
                <fullName>Evaluate Provider Findings</fullName>
            </value>
            <value>
                <fullName>Perform DHSS PI Review/Audit</fullName>
            </value>
            <value>
                <fullName>Evaluate Audit Findings</fullName>
            </value>
            <value>
                <fullName>Determine Provider Actions</fullName>
            </value>
            <value>
                <fullName>Reconsideration</fullName>
            </value>
            <value>
                <fullName>Provider Appeal</fullName>
            </value>
            <value>
                <fullName>Recoupment/Financial Tracking</fullName>
            </value>
            <value>
                <fullName>Dispose Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>