force-app/main/default/objects/Case/fields/Case_Referral__c.field-meta.xml
<CustomField>
    <fullName>Case_Referral__c</fullName>
    <label>Case Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicaid Fraud Control Unit</fullName>
            </value>
            <value>
                <fullName>Federal Audit</fullName>
            </value>
            <value>
                <fullName>Internal Tip</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>FADS Analytic</fullName>
                <isActive>false</isActive>
                <label>FADS Analytic</label>
            </value>
            <value>
                <fullName>SURS Outlier</fullName>
                <isActive>false</isActive>
                <label>SURS Outlier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>