force-app/main/default/objects/Case/fields/Case_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Date__c</fullName>
    <label>Case Status Date</label>
    <type>Date</type>
</CustomField>