force-app/main/default/objects/Case/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <label>Case Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subtype 1</fullName>
            </value>
            <value>
                <fullName>Subtype 2</fullName>
            </value>
            <value>
                <fullName>Subtype 3</fullName>
            </value>
            <value>
                <fullName>Subtype 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>