force-app/main/default/objects/Case/fields/Case_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Case_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>