force-app/main/default/objects/Case/fields/Check_or_MO_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_or_MO_Number__c</fullName>
    <label>Check or MO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>