force-app/main/default/objects/Case/fields/Interest_1__c.field-meta.xml
<CustomField>
    <fullName>Interest_1__c</fullName>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>