force-app/main/default/objects/Case/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest (in %)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>