force-app/main/default/objects/Case/fields/Interest_In_Amt__c.field-meta.xml
<CustomField>
    <fullName>Interest_In_Amt__c</fullName>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>