force-app/main/default/objects/Case/fields/Location_of_Case_File_Documents__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Case_File_Documents__c</fullName>
    <label>Location of Case File Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>