force-app/main/default/objects/Case/fields/No_Of_Installment__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Installment__c</fullName>
    <label>No Of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>