force-app/main/default/objects/Case/fields/Number_of_claims__c.field-meta.xml
<CustomField>
    <fullName>Number_of_claims__c</fullName>
    <label>Number of claims</label>
    <length>10</length>
    <type>Text</type>
</CustomField>