force-app/main/default/objects/Case/fields/Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offset_Amount__c</fullName>
    <label>Offset Amount</label>
    <summarizedField>Payment_Plan_Detail__c.Offset_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Plan_Detail__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>