force-app/main/default/objects/Case/fields/Original_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Due_Date__c</fullName>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>