force-app/main/default/objects/Case/fields/Original_Payment__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment__c</fullName>
    <label>Original Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>