force-app/main/default/objects/Case/fields/PP_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>PP_Begin_Date__c</fullName>
    <label>PP Begin Date</label>
    <type>Date</type>
</CustomField>