force-app/main/default/objects/Case/fields/PP_Begin_Date_Backup__c.field-meta.xml
<CustomField>
    <fullName>PP_Begin_Date_Backup__c</fullName>
    <label>PP Begin Date Backup</label>
    <type>Date</type>
</CustomField>