force-app/main/default/objects/Case/fields/PP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PP_End_Date__c</fullName>
    <description>Initially calculated based on PP Begin Date and No Of Installment</description>
    <label>PP End Date</label>
    <type>Date</type>
</CustomField>