force-app/main/default/objects/Case/fields/PP_Type_Backup__c.field-meta.xml
<CustomField>
    <fullName>PP_Type_Backup__c</fullName>
    <label>PP Type Backup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>