force-app/main/default/objects/Case/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name New</label>
    <length>20</length>
    <type>Text</type>
</CustomField>