force-app/main/default/objects/Case/fields/Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>Referral_Details__c</fullName>
    <label>Referral Details</label>
    <length>15</length>
    <type>Text</type>
</CustomField>