force-app/main/default/objects/Case/fields/Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_End_Date__c</fullName>
    <label>Review End Date</label>
    <type>Date</type>
</CustomField>