force-app/main/default/objects/Case/fields/Revised_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Due_Date__c</fullName>
    <label>Revised Due Date</label>
    <type>Date</type>
</CustomField>