force-app/main/default/objects/Case/fields/Sample_Method__c.field-meta.xml
<CustomField>
    <fullName>Sample_Method__c</fullName>
    <label>Sample Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>simple</fullName>
                <label>Simple</label>
            </value>
            <value>
                <fullName>systematic</fullName>
                <label>Systematic</label>
            </value>
            <value>
                <fullName>stratified</fullName>
                <label>Stratified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>