force-app/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AS 47.05.200 (Contracted Audit)</fullName>
            </value>
            <value>
                <fullName>Analytic/Outlier</fullName>
            </value>
            <value>
                <fullName>Other Complaint/Referral</fullName>
            </value>
            <value>
                <fullName>Division of Healthcare Services Referral</fullName>
            </value>
            <value>
                <fullName>enior and Disabilities Services Division Referral</fullName>
            </value>
            <value>
                <fullName>Behavioral Health Services Division</fullName>
            </value>
            <value>
                <fullName>Medicaid Fraud Control Unit</fullName>
            </value>
            <value>
                <fullName>Medicaid Fraud Control Unit - Global Settlement</fullName>
            </value>
            <value>
                <fullName>Payment Error Rate Measurement (PERM)</fullName>
            </value>
            <value>
                <fullName>Universal Program Integrity Contractor (UPIC)</fullName>
            </value>
            <value>
                <fullName>Self-Audit - Legislative -7 AAC 160.115(b)</fullName>
            </value>
            <value>
                <fullName>Self-Audit - Program Integrity Initiated</fullName>
            </value>
            <value>
                <fullName>Self-Disclosure - Provider Initiated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>