force-app/main/default/objects/Case/fields/Total_Collo_Code_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Collo_Code_Amount__c</fullName>
    <label>Total Collo Code Amount</label>
    <summarizedField>Collo_Codes__c.Amount__c</summarizedField>
    <summaryForeignKey>Collo_Codes__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>