force-app/main/default/objects/Case/fields/Total_Overpayment__c.field-meta.xml
<CustomField>
    <fullName>Total_Overpayment__c</fullName>
    <label>Total Overpayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>