force-app/main/default/objects/Case/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <label>Total Paid Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>