force-app/main/default/objects/Case/fields/Total_Paid_Claims__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Claims__c</fullName>
    <label>Total Paid Claims</label>
    <length>15</length>
    <type>Text</type>
</CustomField>