force-app/main/default/objects/Case/fields/Total_PP_Amount_Backup__c.field-meta.xml
<CustomField>
    <fullName>Total_PP_Amount_Backup__c</fullName>
    <label>Total PP Amount Backup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>