force-app/main/default/objects/Case/fields/Total_Repaid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Repaid_Amount__c</fullName>
    <label>Total Repaid Amount</label>
    <summarizedField>Payment_Plan_Detail__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Plan_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid, Partially Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Plan_Detail__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>