force-app/main/default/objects/Case/fields/Universe_Amount__c.field-meta.xml
<CustomField>
    <fullName>Universe_Amount__c</fullName>
    <label>Universe Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>