force-app/main/default/objects/Case/recordTypes/Client_Audit.recordType-meta.xml
<RecordType>
    <fullName>Client_Audit</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Client Audit</label>
</RecordType>