force-app/main/default/objects/Case/recordTypes/Medicaid_PI_Audit.recordType-meta.xml
<RecordType>
    <fullName>Medicaid_PI_Audit</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Medicaid PI Audit</label>
</RecordType>