force-app/main/default/objects/Case/recordTypes/New_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>New_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>This is a trial record type created to understand the record-type creation process and document it.</description>
    <label>New Record Type</label>
</RecordType>