force-app/main/default/objects/Case/recordTypes/Others.recordType-meta.xml
<RecordType>
    <fullName>Others</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Others</label>
</RecordType>