force-app/main/default/objects/Case/recordTypes/Provider_Audit_Onsite.recordType-meta.xml
<RecordType>
    <fullName>Provider_Audit_Onsite</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Provider Audit-Onsite</label>
</RecordType>