force-app/main/default/objects/Case/recordTypes/Trial_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Trial_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>This is a trial record type created to understand the record-type creation process and document the same.</description>
    <label>Trial Record Type</label>
</RecordType>