force-app/main/default/objects/Case/validationRules/CaseOwnerCannotAssignCaseToSomeone.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseOwnerCannotAssignCaseToSomeone</fullName>
    <active>true</active>
    <description>Case owners cannot assign case to someone</description>
    <errorConditionFormula>AND(ISCHANGED(OwnerId), (PRIORVALUE(OwnerId) ==  $User.Id),(Case_Supervisor__r.Id !=  $User.Id))</errorConditionFormula>
    <errorMessage>You dont have access to assign case to other users</errorMessage>
</ValidationRule>