force-app/main/default/objects/Case/validationRules/CaseSupervisorCanOnlyAssignCasetoOthers.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseSupervisorCanOnlyAssignCasetoOthers</fullName>
    <active>true</active>
    <description>only case supervisors can assign case to others</description>
    <errorConditionFormula>AND(ISCHANGED(OwnerId), ($User.Id != Case_Supervisor__r.Id), ($User.Id != OwnerId))</errorConditionFormula>
    <errorMessage>Only case supervisor can assign a case to others users</errorMessage>
</ValidationRule>