force-app/main/default/objects/Case/validationRules/Closed_Case_Can_Not_Be_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Case_Can_Not_Be_Change</fullName>
    <active>false</active>
    <description>Field Values Can&apos;t Be Change After Case Closure</description>
    <errorConditionFormula>IF(AND(ISCHANGED(Status), ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;)) , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Field Values Can Not Be Change After Case Closure</errorMessage>
</ValidationRule>