force-app/main/default/objects/Case/validationRules/PaymentPlanDetailsRequiredForOneTime.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentPlanDetailsRequiredForOneTime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Payment_Plan__c, &apos;Yes&apos;), ISPICKVAL(PP_Type__c, &apos;One Time&apos;), OR(ISBLANK(Total_PP_Amount__c), ISBLANK(PP_Begin_Date__c)))</errorConditionFormula>
    <errorMessage>If Payment Plan is Yes and PP Type is One Time, Total PP Amount and PP Begin Date is required</errorMessage>
</ValidationRule>